<resources>
    <string name="app_name">Fooddie</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="profile">My Profile</string>
    <string name="favourites">Favourite Restaurants</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Log out</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <array name="filters">
        <item>Cost(Low to High)</item>
        <item>Cost(High to Low)</item>
        <item>Rating</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">All Restaurants</string>
    <string name="rating">⭐4.5</string>
    <string name="rs_299">Rs. 299</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="Q1">Q.1 How will the training be delivered ?</string>
    <string name="A1">A.1 You will be taught using pre-recorded videos and text tutorials. The training has quizes,tests and assignments to help you learn better. At the end of the training you will attempt a project to get hands-on practice of what you learn during the training</string>
    <string name="Q2">Q.2 What will be the timings of the training ?</string>
    <string name="A2">A.2 As this is a purely online training program, you can choose to learn at anytime of the day, We will recommend a peace to be followed throughout the program but the actual timings and learning hours can be decided by the students according to their convinience.</string>
    <string name="Q3">Q.3 What is the duration of training ?</string>
    <string name="A3">A.3 The training durations is of 6 weeks.</string>
    <string name="Q4">Q.4 How much time should I spend everyday ?</string>
    <string name="A4">A.4 We recommended spending 10-12 hours per week. However the actual learning hours can be decided by you as per your convinience</string>
    <string name="order_history">Order History</string>
    <string name="txtForgotPasswordActivity">Enter your registered mobile number and email below</string>
    <string name="phone_number_10_digits">Phone number (10 digits)</string>
    <string name="email_address">Email address</string>
    <string name="next">Next</string>
    <string name="txt_rest_password">Enter the recieved OTP from email below</string>
    <string name="otp_4_digits">OTP (4 digits)</string>
    <string name="reset_email_address">Email address</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password_min_6_characters">New Password (Min. 6 characters)</string>
    <string name="serial_number">1.</string>
    <string name="restaurant_name_2">Restaurant Name</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="choose_from_menu_listed_below">Choose from menu Listed below</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="place_order">Place Order</string>
    <string name="choose_from_restaurant">Choose from: Restaurant</string>
    <string name="food_item_name">Food Item Name</string>
    <string name="rs_100">Rs.100</string>
    <string name="order_history_static_text">Your previous orders are listed below:</string>
    <string name="restaurant_name2">Restaurant Name</string>
    <string name="date_time">Date-time</string>
    <string name="food_name">Food Name</string>
    <string name="price2">Price</string>
    <string name="ordering_from">Ordering from:</string>
    <string name="order_placed">Order Placed..!!</string>
    <string name="sort">Sort</string>
</resources>
