<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FaqsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q1"
            android:layout_margin="10dp"
            android:textColor="@android:color/holo_red_light"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/A1"
            android:layout_margin="10dp"
            android:textColor="#000"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q2"
            android:layout_margin="10dp"
            android:textColor="@android:color/holo_red_light"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/A2"
            android:layout_margin="10dp"
            android:textColor="#000"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q3"
            android:layout_margin="10dp"
            android:textColor="@android:color/holo_red_light"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/A3"
            android:layout_margin="10dp"
            android:textColor="#000"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q4"
            android:layout_margin="10dp"
            android:textColor="@android:color/holo_red_light"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/A4"
            android:layout_margin="10dp"
            android:textColor="#000"
            android:textSize="17sp"/>

    </LinearLayout>

</ScrollView>