<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:weightSum="10"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtSerialNo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/serial_number"
        android:textSize="16sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtFoodName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_name"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/txtFoodPrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/price"
            android:textSize="14sp"
            android:gravity="bottom"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnAddToCart"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_weight="2.5"
        android:layout_margin="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/add"
        android:textColor="#fff"/>

</LinearLayout>