<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.ResetPasswordActivity">

    <TextView
        android:id="@+id/txtInfoReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_rest_password"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/etResetOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/otp_4_digits"
        android:inputType="phone"
        android:maxLines="1"
        android:maxLength="4"
        android:layout_margin="20dp"
        android:background="#ffffff"
        android:padding="8dp"
        android:layout_below="@+id/txtInfoReset"/>

    <EditText
        android:id="@+id/etResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#ffffff"
        android:padding="8dp"
        android:hint="@string/new_password_min_6_characters"
        android:inputType="textPassword"
        android:layout_below="@+id/etResetOtp"/>

    <EditText
        android:id="@+id/etConfirmResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:padding="8dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_below="@+id/etResetPassword"/>

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etConfirmResetPassword"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/reset_password"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="#800F0F"
        android:textColor="#ffffff"
        android:textStyle="bold"/>

</RelativeLayout>