<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CA5656"
    tools:context=".activity.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/imgForgotActivityLogo"
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:src="@drawable/app_logo"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtForgotPasswordActivity"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/imgForgotActivityLogo"/>

    <EditText
        android:id="@+id/etForgotPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number_10_digits"
        android:inputType="phone"
        android:maxLines="1"
        android:maxLength="10"
        android:layout_margin="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/phone_icon"
        android:padding="8dp"
        android:layout_below="@+id/txtInfo"/>

    <EditText
        android:id="@+id/etForgotEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#ffffff"
        android:padding="8dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/etForgotPhoneNumber"
        android:drawableStart="@drawable/email"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etForgotEmail"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/next"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="#800F0F"
        android:textColor="#ffffff"
        android:textStyle="bold"/>

</RelativeLayout>