<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment"
    android:background="@color/colorPrimary">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfileImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/txtProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgProfileImage"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/name"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="#000"
        android:background="#fff"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/txtProfilePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtProfileName"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/phone_number"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="#000"
        android:background="#fff"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/txtProfileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtProfilePhone"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/email"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="#000"
        android:background="#fff"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/txtProfileAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtProfileEmail"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/delivery_address"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="#000"
        android:background="#fff"
        android:padding="5dp"/>

</RelativeLayout>