<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:layout_margin="6dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="#ffffff"
        android:weightSum="10"
        android:id="@+id/allRestaurantsLayout2">

        <ImageView
            android:id="@+id/imgRestaurantImage2"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:src="@mipmap/ic_launcher_round"
            android:contentDescription="@android:string/cancel"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="4"
            android:layout_marginStart="15dp">

            <TextView
                android:id="@+id/txtRestaurantName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_name"
                android:textSize="17sp"
                android:maxHeight="40dp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/txtPriceForOne2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rs_299"
                android:textSize="16sp"
                android:textColor="#357837"
                android:layout_marginBottom="4dp"
                android:gravity="bottom"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtRestaurantRating2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#C8B935"/>

            <ImageView
                android:id="@+id/imgFavouritesIcon2"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:src="@drawable/like"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>